# os-learning

./: .gitignore  CMakeLists.txt  Makefile  day1.md  env.md  toolchain.cmake
kernel/: boot.s  kernel.cpp  linker.ld
